--- a/docs/user-guide/block-types/utility/REST-Call.mdx
+++ b/docs/user-guide/block-types/utility/REST-Call.mdx
@@ -1,5 +1,8 @@
 ---
 title: REST Call Block
+description: Make REST API calls with Ziggy's REST Call utility block. Complete guide for API integration, pagination, and data retrieval flows.
+keywords: [ziggy, utility blocks, rest api, api calls, http requests, api integration]
+image: /img/ziggy-logo-light.webp
 ---
 
 import CodeBlock from '@theme/CodeBlock';
